--- a/HangmanProject/HangmanProject/HangmanProject.csproj
+++ b/HangmanProject/HangmanProject/HangmanProject.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hangman.cs" />
+    <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
