--- a/HangmanProject/HangmanProject/HangmanProject.csproj
+++ b/HangmanProject/HangmanProject/HangmanProject.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Words.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
