--- a/Insertion_Sort/Insertion_Sort/Insertion_Sort.csproj
+++ b/Insertion_Sort/Insertion_Sort/Insertion_Sort.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75766410-808A-4D8D-9797-5FB00F88B197}</ProjectGuid>
+    <ProjectGuid>{D8C4CEE6-C694-4AAF-B3A8-810DD82904B7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ExampleofLinearSearch</RootNamespace>
-    <AssemblyName>ExampleofLinearSearch</AssemblyName>
+    <RootNamespace>Insertion_Sort</RootNamespace>
+    <AssemblyName>Insertion_Sort</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
